--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2791089_7cjnbveh3d9.css">
   <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   <title>FireBlogs</title>
-  <script type="module" crossorigin src="/fireblogs/assets/index.f260a8fc.js"></script>
-    <link rel="modulepreload" href="/fireblogs/assets/vendor.d96f001e.js">
-    <link rel="stylesheet" href="/fireblogs/assets/index.bc80df24.css">
+  <script type="module" crossorigin src="assets/index.937e4b00.js"></script>
+    <link rel="modulepreload" href="assets/vendor.d96f001e.js">
+    <link rel="stylesheet" href="assets/index.692c5c24.css">
   </head>
 
 <body>
