--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/fireblogs/favicon.ico" />
+  <link rel="icon" href="/firebase-3/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2791089_7cjnbveh3d9.css">
   <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   <title>FireBlogs</title>
-  <script type="module" crossorigin src="assets/index.937e4b00.js"></script>
-    <link rel="modulepreload" href="assets/vendor.d96f001e.js">
-    <link rel="stylesheet" href="assets/index.692c5c24.css">
+  <script type="module" crossorigin src="/firebase-3/assets/index.937e4b00.js"></script>
+    <link rel="modulepreload" href="/firebase-3/assets/vendor.d96f001e.js">
+    <link rel="stylesheet" href="/firebase-3/assets/index.c2271752.css">
   </head>
 
 <body>
